--- a/FRONTEND/portfolioAngular/src/styles.css
+++ b/FRONTEND/portfolioAngular/src/styles.css
@@ -1,1 +1,238 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+   
+}
+body{
+    font-family: 'Poppins', sans-serif;
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(imagenes/bald-eagle-gc4df5e330_1280.jpg); */
+    background-color: #343434;
+    background-position: center;
+    background-attachment:contain;
+    background-size: cover;
+    display:flex;
+    flex-flow: column nowrap;
+    opacity: 0.8;
+}
+a{
+    text-decoration: none;
+}
+.padre{
+    display:flex;
+    flex-flow: column nowrap;
+    
+}
+
+.menu{
+    background: #ededed6b;
+    display: flex;
+    flex-flow: row nowrap;
+    height: 100px;
+    align-items: center;
+    border-bottom: 1px solid rgba(255,255,255,.5) ;
+}
+.logo{
+        flex: 1 1 auto;    
+}
+.logo img{
+    width: 300px;
+    height: 200px; 
+    margin-left: 10px;
+}
+    
+.nav{
+        
+    flex: 5 1 auto;    
+}
+.nav h1{
+    color: #000000;
+    font-size: 35px;
+    text-transform: uppercase;
+    padding: 0 10px;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+.nav a:hover{
+    color: #343434;
+}
+.redsocial{
+    flex: 1 1 auto;
+    display: flex;
+    align-items: center;
+}
+    .redsocial a{
+        font-size: 18px;
+        color: #000;
+        padding: 0 5px;
+    }
+    .redsocial a:hover{
+        color: #343434;
+    }
+    .boton{
+        display: flex;
+        align-content: center;
+    }
+    .botonlogin{
+        font-weight: bold;
+        border: none;
+    }
+
+    nav h1{
+        font-family: 'Poppins', sans-serif;
+        font-size: 21px;
+        color: #000;
+        font-weight: 300;
+        text-align: center;
+        line-height: 1.6;
+    }
+.banner img{
+    width: 100%;
+    height: 400px;
+}
+    .titulo-principal{
+        text-align: center;
+        font-size: 2em;
+        margin: 0 0 1em;
+        clear:left;
+        color: #FF7D7D;
+    }
+    
+    
+    .acercade{
+        flex: 5 1 auto;
+        padding: 15px;
+        font-weight: bold;
+        background: #ededed6b;
+
+    }
+    .acercade img{
+        border-radius: 100px;
+        width: 50px;
+        height: 50px;
+    }
+
+    .articulos{
+        flex: 2 1 auto;
+        display: flex;
+        flex-flow: row wrap;
+        
+    }
+    .article{
+        flex: 1 1 40%;
+        color:whitesmoke; 
+        font-size: 20px;
+        letter-spacing: 1px;
+        margin: 10px 10px 0 10px; 
+        background: #ededed6b;
+        border-radius: 24px;
+        /* background: black; */
+        /* opacity: 0.1; */
+        
+    }
+
+    .article img{
+        width: 40%;
+        height: 40%;
+        float: left; 
+    }
+
+    .card-body{
+        width: 50%;
+        height: 50%;
+        float:right;
+    } 
+
+    .estudios{
+        flex: 2 1 auto;  
+        display: flex;
+        flex: 1 1 45%;
+        /* position: relative; */
+    }
+    .estudios li{
+        background: #ededed6b;
+        display: inline-block; 
+        text-align: center;
+        vertical-align: top;
+        margin: 0 1.5%;
+        padding: 30px 20px;
+        box-sizing: border-box;
+        border: 2px solid #000000;
+        border-radius: 10px;
+    }
+    
+    .estudios li:hover{
+        border-color:#FB3640;
+    }
+    
+    .estudios li:active{
+        border-color:#542E71;
+    }
+    
+    .estudios h2{
+        font-size: 30px;
+        font-weight: bold;
+    }
+    
+    .estudios li:hover h2{
+        font-size: 33px;
+    }
+    
+    .estudio-descripcion{
+        font-size: 18px;
+    }
+    
+    .estudio-fecha{
+        font-size: 20px;
+        font-weight: bold;
+        margin-top:10px;
+    }
+    .estudio img{
+        width: 50%;
+        height: 50%;
+    }
+i{
+    float: right;
+}
+ 
+    .footer{
+        text-align: center;
+        background: #0b0b0bfe;
+        padding:15px;
+    }
+    .footer img{
+        border-radius: 100px;
+        width: 50px;
+        height: 50px;
+    }
+    
+    .copyright{
+        color:#FFFFFF;
+        font-size: 13px;
+        margin:20px;
+    }
+/* @media all and (max-width: 1120px){
+    .section{
+        flex-direction: column;
+    }
+    .menu{
+        flex-direction: column; 
+        height: auto; 
+    }
+    h1{
+        font-size: 15px;
+    }
+} */
+@media all and (max-width: 650px){
+    
+}
+@media all and (max-width: 600px){
+    .articulos{
+        flex-direction: column;
+    }
+    .estudios{
+        display: flex;
+        flex-direction: column;
+    }
+}
