subiendo imágenes en la carpeta assets y terminando header component

--- a/FRONTEND/portfolioAngular/src/app/components/header/header.component.html
+++ b/FRONTEND/portfolioAngular/src/app/components/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<header class="header ">
+    <div class="menu margen-interno">
+        <div class="logo">
+            <img src="assets/APLogo-20-20.png" alt="">
+        </div>
+        <nav class="nav">
+            <h1>Verónica Elena Nievas Guardia</h1>
+        </nav>
+        <div class="redsocial">
+            <div ><a href="#" class="boton"><i class="fa-brands fa-github "></i></a></div>
+            <div ><a href="#"class="boton"><i class="fa-brands fa-linkedin "></i></a></div>
+            <div ><a href="#" class="botonlogin" >Login</a></div>
+        </div>
+    </div>
+    <div class="banner">
+      <img src="assets/backgroundaguila.jpg" alt="">
+    </div>
+</header>
