creando componentes de experiencia y educación

--- a/FRONTEND/portfolioAngular/src/app/components/header/header.component.html
+++ b/FRONTEND/portfolioAngular/src/app/components/header/header.component.html
@@ -6,8 +6,8 @@
         <nav class="nav">       
         </nav>
         <div class="redsocial">
-            <div ><a href="#" class="boton"><i class="fa-brands fa-github "></i></a></div>
-            <div ><a href="#"class="boton"><i class="fa-brands fa-linkedin "></i></a></div>
+            <div ><a href="https://github.com/VeroNievas" class="boton"><i class="fa-brands fa-github "></i></a></div>
+            <div ><a href="https://www.linkedin.com/in/ver%C3%B3nica-nievas-2a0a1b257/"class="boton"><i class="fa-brands fa-linkedin "></i></a></div>
             <div ><a href="#" class="botonlogin" >Login</a></div>
         </div>
     </div>
