--- a/FRONTEND/portfolioAngular/src/styles.css
+++ b/FRONTEND/portfolioAngular/src/styles.css
@@ -122,7 +122,8 @@ a{
     .article{
         flex: 1 1 40%;
         color:whitesmoke; 
-        font-size: 20px;
+        font-weight: bold;
+        /* font-size: 20px; */
         letter-spacing: 1px;
         margin: 10px 10px 0 10px; 
         background: #ededed6b;
@@ -133,8 +134,8 @@ a{
     }
 
     .article img{
-        width: 40%;
-        height: 40%;
+        width: 20%;
+        height: 20%;
         float: left; 
     }
 
