creando componentes de las secciones habilidades con bootstrap y poryectos con el formato de educacion

--- a/FRONTEND/portfolioAngular/src/styles.css
+++ b/FRONTEND/portfolioAngular/src/styles.css
@@ -96,7 +96,7 @@ a{
         font-size: 2em;
         margin: 0 0 1em;
         clear:left;
-        color: #FF7D7D;
+        color: #f56161;
     }
     
     
