--- a/FRONTEND/portfolioAngular/src/app/app.component.html
+++ b/FRONTEND/portfolioAngular/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-acercade></app-acercade>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-habilidades></app-habilidades>
+<app-proyectos></app-proyectos>
